001-nettools-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine-nettools
  labels:
    app: alpine-nettools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine-nettools
  template:
    metadata:
      labels:
        app: alpine-nettools
    spec:
      containers:
      - name: alpine-nettools
        image: raesene/alpine-nettools
        imagePullPolicy: Always
        ports:
        - containerPort: 22
